# manipulator_multi_controllers

./: .gitignore  README.md
controller_error_msgs/: CMakeLists.txt  package.xml
controller_error_msgs/msg/: DesiredConfiguration.msg  Gains.msg  OperationalSpaceError.msg  RegressorStats.msg
manipulator_controller/: CMakeLists.txt  manipulator_controller.xml  package.xml
manipulator_controller/controller/: multi_controller.cpp  thunder_panda.cpp
manipulator_controller/controller/include/manipulator_controller/: multi_controller.hpp
manipulator_controller/controller/include/panda_generated/: panda_gen.h
manipulator_controller/controller/include/thunder_generated/: panda_gen.h  thunder_panda.h
manipulator_controller/manipulator_controller/: error_plotter.py  send_pose.py
robots_description/: CMakeLists.txt  package.xml
robots_description/config/: panda.rviz  panda_multi_controller.yaml
robots_description/launch/: panda_description.launch.py  panda_display.launch.py  panda_gazebo.launch.py
robots_description/robots/franka_panda/common/: franka_arm.xacro  franka_arm_no_limits.xacro  franka_hand.xacro  franka_robot.xacro  hand.urdf.xacro  utils.xacro
